[package]
name = "ellipticoin-api"
version = "0.0.2"
authors = ["Mason Fischer <mason@kissr.co>"]
description = "A library for building Elliptcoin smart contracts"
license = "MIT"

[lib]
crate-type =["rlib"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

[dependencies]
wasm-rpc-macros = "0.2.13"
wasm-rpc = "0.2.13"
